# AgenDev-Studio

./: .gitignore  CONTRIBUTING.md  LICENSE  PRODUCT_DESIGN_DOC.md  README.md  pyproject.toml  requirements.txt
src/: main.py
src/agents/: base.py  implementations.py
src/core/: traceability.py
src/core/engine/: executor.py  logger.py  memory_manager.py  message_pool.py  sop_executor.py
src/core/sop/: validators.py  workflow.json
src/infrastructure/: Dockerfile  docker-compose.yml
src/ui/: streamlit_app.py
tests/: test_core_engine.py
