[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autodev-studio"
version = "1.0.0"
description = "Enterprise-grade Autonomous Software Development System"
readme = "README.md"
authors = [{ name = "AutoDev Engineering Team", email = "engineering@autodev.studio" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "streamlit>=1.31.0",
    "pytest>=8.0.0",
]
requires-python = ">=3.11"

[project.urls]
"Homepage" = "https://github.com/autodev/studio"
"Bug Tracker" = "https://github.com/autodev/studio/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
